crates/tui/snapshots/fullscreen/header/workspace_header_and_hintbar.snap
---
source: crates/tui/src/app/fullscreen/header_tests.rs
expression: text
---
   main /work/ash                                         [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard · ? for shortcuts
